Removed invalid .gitattributes file

--- a/fichier jupiter test ml2.ipynb
+++ b/fichier jupiter test ml2.ipynb
@@ -207,9 +207,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "importation des bibliotheques"
+   ]
   },
   {
    "cell_type": "code",
@@ -225,9 +228,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "conversion a les colonnes 'open_time' et 'close_time' au format datetime garce a la methode to_datetime de Pandas"
+   ]
   },
   {
    "cell_type": "code",
