--- a/model/rf_regressor.ipynb
+++ b/model/rf_regressor.ipynb
@@ -5,7 +5,7 @@
    "id": "d84b65f8",
    "metadata": {},
    "source": [
-    "# OPT -> Etape de modélisation : "
+    "# OPT Etape de modélisation : "
    ]
   },
   {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "fa32c4da",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "ed1b5a44",
    "metadata": {},
    "outputs": [],
@@ -51,32 +51,17 @@
     "import numpy as np\n",
     "from datetime import datetime\n",
     "from datetime import timedelta\n",
-    "import statsmodels.tsa.api as tsa\n",
-    "from statsmodels.tsa.stattools import adfuller, acf, pacf\n",
-    "from statsmodels.tsa.holtwinters import ExponentialSmoothing, Holt\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns \n",
-    "from statsmodels.tsa.arima_process import ArmaProcess\n",
-    "from statsmodels.stats.diagnostic import acorr_ljungbox\n",
-    "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
-    "from statsmodels.tsa.seasonal import STL\n",
     "from pandas.plotting import register_matplotlib_converters\n",
     "from scipy.stats import boxcox\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from statsmodels.graphics.tsaplots import plot_pacf\n",
-    "from statsmodels.graphics.tsaplots import plot_acf\n",
-    "from statsmodels.tsa.arima_model import ARMA\n",
-    "from statsmodels.tsa.arima.model import ARIMA, ARIMAResults\n",
-    "import statsmodels.api as sm\n",
+    "\n",
     "\n",
     "\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "from datetime import datetime, timedelta\n",
-    "from sklearn.metrics import roc_auc_score\n",
-    "from sklearn.metrics import roc_curve\n",
     "\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -86,6 +71,7 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import mean_squared_error\n",
+    "import pickle\n",
     "\n",
     "\n",
     "%matplotlib inline"
@@ -96,14 +82,24 @@
    "id": "778cb76e",
    "metadata": {},
    "source": [
-    "## Connexion avec la base  de données Mysql : \n"
+    "### Connexion avec la base  de données Mysql  OPA: \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "540f60bc",
+   "metadata": {},
+   "source": [
+    "Ce code se connecte à la base de données MySQL en utilisant les informations d'identification (user, password, host, port, database) fournies. Ensuite, il exécute une requête SQL pour récupérer les données de la table 'historical_klines' et les stocke dans un objet Pandas DataFrame. Enfin, il affiche les cinq premières lignes du DataFrame et ferme la connexion avec la base de données MySQL."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "id": "b6ad3278",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -271,6 +267,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed1a9a09",
+   "metadata": {},
+   "source": [
+    "Nous avons déjà préparé les données au préalable, et nous les avons stocker sur un fichier csv."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "6109e484",
@@ -284,7 +288,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "e8f8b65f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -335,11 +341,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "a1f919b1",
+   "cell_type": "markdown",
+   "id": "af02868e",
    "metadata": {},
    "source": [
-    "# ce code remplit d'abord les valeurs manquantes en les propageant vers l'avant (en utilisant la dernière valeur non manquante précédente) puis supprime les lignes qui contiennent encore des valeurs manquantes."
+    "ce code remplit d'abord les valeurs manquantes en les propageant vers l'avant (en utilisant la dernière valeur non manquante précédente) puis supprime les lignes qui contiennent encore des valeurs manquantes."
    ]
   },
   {
@@ -360,7 +366,7 @@
    "id": "c6c81b99",
    "metadata": {},
    "source": [
-    "#Ce code crée six colonnes décalées pour chacune des colonnes spécifiées dans lag_columns. La variable lag_count détermine le nombre de colonnes décalées à créer. La boucle for imbriquée parcourt chaque colonne et crée les colonnes décalées en utilisant la méthode shift(). Enfin, la fonction dropna() supprime les lignes avec des valeurs manquantes résultant du décalage."
+    "Nous créons six colonnes décalées pour chacune des colonnes spécifiées dans lag_columns. La variable lag_count détermine le nombre de colonnes décalées à créer. La boucle for imbriquée parcourt chaque colonne et crée les colonnes décalées en utilisant la méthode shift(). Enfin, la fonction dropna() supprime les lignes avec des valeurs manquantes résultant du décalage."
    ]
   },
   {
@@ -543,8 +549,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "\n",
     "# Assuming your trained model is named `model`\n",
     "with open(\"best_model.pkl\", \"wb\") as file:\n",
     "    pickle.dump(best_model, file)\n"
